# rust-cli-calculator

./: Cargo.toml  README.md
src/: main.rs
